🚧 [ADD] Google signin on Android

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.auth_app">
+    package="com.hajduksanchez.flutter_auth_app">
    <application
         android:label="auth_app"
         android:name="${applicationName}"
